# pyampute

./: setup.cfg  setup.py
pyampute/: ampute.py  utils.py
pyampute/data/: shift_lookup.csv
pyampute/exploration/: md_patterns.py
scripts/: generate_shift_lookup_table.py
tests/: test_mapping.py  test_mcar.py  test_md_patterns.py
