[metadata]
name = pyampute
version = 0.0.3
description = Transformer for generating multivariate missingness in complete datasets
long_description = Amputation is the opposite of imputation; it is the creation of a missing data mask for complete datasets. Amputation is useful for evaluating the effect of missing values on the outcome of a statistical or machine learning model. ``pyampute`` is the first open-source Python library for data amputation. Our package is compatible with the scikit-learn-style fit and transform paradigm, which allows for seamless integration of amputation in a larger, more complex data processing pipeline.
author = Rianne Schouten, Davina Zamanzadeh, Prabhant Singh
author_email = r.m.schouten@tue.nl, davzaman@gmail.com, p.singh@tue.nl
license = BSD
project_urls =
    Documentation = https://rianneschouten.github.io/pyampute/build/html/index.html
    Source Code = https://github.com/RianneSchouten/pyampute

[options]
packages = find:
include_package_data = True
install_requires =
    pandas
    numpy>=1.19.0
    scipy
    matplotlib>=3.4.0
    scikit-learn

[options.packages.find]
include =
    pyampute.*
    pyampute

[options.package_data]
pyampute = data/shift_lookup.csv

[options.extras_require]
docs =
    sphinx
    pydata-sphinx-theme
    sphinx-autodoc-typehints
    sphinx-gallery
